syntax = "proto3";

import "blockchain.proto";

enum BlockTag {
    Latest = 0;
    Earliest = 1;
}

message Call {
    bytes from = 1;
    bytes to = 2;
    bytes data = 3;
    string height = 4;
}

message Request {
    bytes request_id = 1;
    oneof req {
        bool block_number = 2;
        string block_by_hash = 3;
        string block_by_height = 4;
        bytes transaction = 5;
        uint64 height = 6;
        bool peercount = 7;
        Call call = 8;
        string filter = 9;
        bytes transaction_receipt = 10;
        string transaction_count = 11;
        string code = 12;
        string new_filter = 13;
        bool new_block_filter = 14;
        uint64 uninstall_filter = 15;
        uint64 filter_changes = 16;
        uint64 filter_logs = 17;
        UnverifiedTransaction un_tx = 18;//交易统一到这里了。划分在请求里面
    }
}




